docs/assets/main.scss
---
---

$baseurl: "{{ site.baseurl }}";

// Use AAF Raleway Google Font
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

@import "variables";
@import "bootstrap/bootstrap";
@import "syntax-highlighting";
@import "bootstrap_customization";
@import "typeahead";
@import "bootstrap-callouts";

html,
body {
  // overflow-x: hidden; /* Prevent scroll on narrow devices */
}
main {
  min-height: 65vh;
}

.h1, .h2, .h3, .h4, .h5, .h6, 
h1, h2, h3, h4, h5, h6 {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
}

.p {
  font-family: 'Inter', sans-serif;
}

.btn {
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 1px;
  border-width: 2px;
}

.btn-primary {
  background-color: $primary;
  color: #000000;
}

.btn-link {
  text-decoration: none;
  color: darken($primary, 5%);
  &:hover, 
  &:focus, 
  &:active {
    text-decoration: none;
    color: darken($primary, 15%);
  }
}

.navbar {
  background-color: $aaf-dark-grey;
}

.nav-link {
  text-transform: uppercase;
}

/*
 * Header
 */
header {
  background-color: #969696;
  background: linear-gradient(to top right, $aaf-orange, $aaf-indigo);
  background-size: cover;
  padding-bottom: 200px;
  margin-bottom: -200px;
}

.banner-hero-card {
  color: #EEEEEE;
}

.footer-callout {
  background-color: #f2f2f2;
  .container {
    margin-top: -100px;
  }
}

/*
 * Footer
 */
.footer {
  padding: 80px 0;
  font-family: "Lato", sans-serif;
  font-weight: 300;
  font-style: normal;
  color: #bdbdbd;
  background-color: #2d2d2d;
  line-height: 1.9em;

  .footer-text {
    font-size: 0.8em;
    text-align: justify;

    a {
      &:hover,
      &:focus {
        color: $aaf-yellow;
        text-decoration: none;
      }
    }

    ul {
      list-style: none;
    }
  }

  h6 {
    text-transform: uppercase;
    font-family: "Inter", sans-serif;
    font-weight: 300;
    font-style: normal;
    color: #ffffff;
    margin-top: 0.8em;

    &:after {
      content: "";
      background: #5F368A;
      height: 3px;
      display: block;
      margin-top: 10px;
      margin-bottom: 25px;
      max-width: 50px;
    }
  }

  .footer-links {
    a {
      color: $info;
      text-decoration: none;
      &:hover {
        color: $aaf-orange;
      }
    }
  }

  .logo {
    width: 250px; /* Default size */
    margin-bottom: 25px;
  }

  .ncris {
    width: 161px; /* Default size */
  }

  .custom-flex {
    display: flex;
    flex-wrap: wrap;
    margin: 0.5rem;
  }

  .acknowledge {
    margin-right: 40px;
  }

  /* Extra large devices (large desktops, 1200px and up) */
    @media (min-width: 1200px) {
        .logo {
        width: 250px;
        }

        .ncris {
        width: 161px;
        }

        .acknowledge {
        margin-right: 50px;
        }

        .card-container {
        margin-left: 0;
        margin-right: 0;
        }
    }

  /* Large devices (desktops, 992px and up) */
  @media (min-width: 992px) and (max-width: 1199px) {
    .custom-flex {
      flex-direction: row;
      justify-content: space-between;
    }

    .logo {
      width: 180px;
    }

    .ncris {
      width: 120px;
    }

    .acknowledge {
      margin-right: 20px;
    }

    .card-container {
      margin-left: 0;
      margin-right: 0;
    }
  }

  /* Medium devices (tablets, 768px and up) */
  @media (min-width: 768px) and (max-width: 991.98px) {
    .custom-flex > .col {
      flex: 1 1 50%; /* Two columns per row */
    }

    .logo {
      width: 170px;
    }

    .ncris {
      width: 80px;
    }

    .set-width {
      max-width: 40%;
      margin-right: 40px;
    }
  }

  /* Small devices (landscape phones, 576px and up) */
  @media (min-width: 576px) and (max-width: 767.98px) {
    .custom-flex {
      flex-direction: column;
    }

    .ncris {
      width: 70px;
      margin-bottom: 20px;
    }

    .logo {
      width: 130px;
    }

    .set-width {
      max-width: 50%;
    }
  }

  /* Extra small devices (portrait phones, less than 576px) */
  @media (max-width: 575.98px) {
    .custom-flex {
      flex-direction: column;
    }

    .ncris {
      width: 60px;
      margin-bottom: 20px;
    }

    .logo {
      width: 100px;
    }

    .footer-text {
      text-align: start;
    }

    .set-width {
      max-width: 50%;
    }
  }

  .socials {
    display: flex;
    flex-direction: row;
    gap: 20px;
  }

  .socials a {
    display: flex;
    align-items: center;
    justify-content: center;
    background: #393939;
    border-radius: 3px;
    transition: background 0.2s;
    width: 2em;
    height: 2em;
  }

  .socials a i {
    color: #fff;
    font-size: 0.9em;
    transition: color 0.2s;
  }

  .socials a:hover {
    background: $aaf-purple;
  }

  .socials a:hover i {
    color: $aaf-orange;
  }
}

/*
 * Sidebar
 */
.sidebar {
  padding-top: 1.5rem;
  font-size: 0.9em;
  .list-group-item.active {
    color: #000000;
  }
}


/*
 * Utilities
 */

.border-top {
  border-top: 1px solid #e5e5e5;
}

.border-bottom {
  border-bottom: 1px solid #e5e5e5;
}

pre {
  background-color: #404040;
  color: #ccc;
}

// No underline for list items or buttons
code {
  font-size: 80%;
}

/* Force consistent style for console code */
.language-console {
  .highlight {
    pre, code, span {
      color: #fff;
    }
  }
}

/*
 * Cards
 */
.card {
  // min-width: 280px;
}

.card-container {
  margin: 1em;
  .card-header,
  .card-body,
  .card-footer {
    padding: 0.75em;
  }
  a.card-tut-link { 
    color: inherit;
    text-decoration: none;
  }
}

.card-category {
  .series {
    width: 2rem;
    height: 2rem;
  }
}

/*
 * Search
 */
#search-clear {
  display: none;
  border-color: #c6c6c6 !important; // Same as form-control default state
}

#search-input.form-control {
  &:focus {
    outline: 0 !important;
    border-color: #c6c6c6; // Same as form-control default state
    box-shadow: none;
  }
}

/*
 * Difficulty indicator
 */
.difficulty-indicator {
  background-image: url($baseurl + "/assets/images/level-of-difficulty.svg");
  background-position-y: 5px;
  background-position-x: -75px;
  background-repeat: no-repeat;
  display: inline-block;
  margin-left: 3px;
  margin-right: -3px;
  text-indent: -99999px;
  width: 75px;
}

.difficulty-indicator-1 {
  background-position-x: -60px;
}
.difficulty-indicator-2 {
  background-position-x: -45px;
}
.difficulty-indicator-3 {
  background-position-x: -30px;
}
.difficulty-indicator-4 {
  background-position-x: -15px;
}
.difficulty-indicator-5 {
  background-position-x: 0px;
}

/*
 * Sidebar items
 */ 
/* https://stackoverflow.com/questions/40463542/how-to-make-vertical-lines-between-list-items-using-css */

#up-next {
  a {
    &:hover {
      color: #ffffff;
    }
  }
}

.series-tutorial {
  position: relative;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: border-box;
  border: 1px solid $info;
  border-radius: 0.25rem;
  padding: 1.25rem;
  margin-bottom: 1.25rem;
  p {
    margin-bottom: 0;
    small {
      font-weight: bold;
      color: $secondary;
    }
  }
  &.completed {
    border: 1px solid rgba(0, 0, 0, 0.125);
  }
  span.tut-complete {
    position: absolute;
    top: -12px;
    right: -12px;
    font-size: 16px;
    width: 24px;
    height: 24px;
    text-align: center;
    vertical-align: middle;
    line-height: 24px;
    color: #fff;
    background: $success;
    border-radius: 12px;
    &:after {
      font-family: 'Font Awesome 5 Free';
      content: "\f00c";
    }
  }
}

